# programming_bitcoin

./: Cargo.toml  README.md  flake.nix
chapter1/: Cargo.toml
chapter1/src/: main.rs
chapter2/: Cargo.toml
chapter2/src/: main.rs
chapter3/: Cargo.toml
chapter3/src/: finite_field.rs  finite_field_point.rs  lib.rs  private_key.rs  real_numbers_point.rs  s256_point.rs  script.rs  signature.rs  tx.rs  tx_fetcher.rs  utils.rs
src/: block.rs  bloomfilter.rs  finite_field.rs  finite_field_point.rs  lib.rs  merkle_tree.rs  network.rs  op.rs  private_key.rs  s256_field.rs  s256_point.rs  script.rs  signature.rs  tx.rs  tx_fetcher.rs  utils.rs
