[package]
name = "chapter3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = {version = "0.4", features = ["rand"]}
once_cell = "1.17.1"
sha2 = "0.10.6"

[dev-dependencies]
hex-literal = "0.3.4"
